adding async and mongoose as dev dependencies

--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "node": "~0.4.12"
   },
   "dependencies": {
-    "Faker": "*",
-    "mongoose": "*"
+    "Faker": "*"
   },
   "devDependencies": {
     "mocha": "*",
-    "should": "*"
+    "should": "*",
+    "mongoose": "*",
+    "async": "*"
   }
 }
