--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "node": "~0.4.12"
   },
   "dependencies": {
-    "Faker": "*"
+    "Faker": "*",
+    "mocha": "~1.3.2",
+    "should": "~1.1.0",
+    "underscore": "~1.3.3"
   },
   "devDependencies": {
-    "vows": "*",
     "async": "*",
-    "assert": "*",
     "sequelize": "1.5.0"
   }
 }
