--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "Faker": "*",
     "mocha": "~1.3.2",
     "should": "~1.1.0",
-    "underscore": "~1.3.3"
+    "underscore": "~1.3.3",
+    "lingo": "0.0.5"
   },
   "devDependencies": {
     "async": "*",
