--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "Faker": "*",
     "mocha": "~1.3.2",
-    "should": "~1.1.0"
+    "should": "~1.1.0",
+    "moment": "~1.7.0"
   }
 }
