--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "nicholas faiz",
   "name": "ectypes",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "repository": {
     "type": "git",
     "url": "git://github.com/nicholasf/ectypes.js.git"
@@ -16,7 +16,6 @@
   "devDependencies": {
     "Faker": "*",
     "mocha": "~1.3.2",
-    "should": "~1.1.0",
-    "moment": "~1.7.0"
+    "should": "~1.1.0"
   }
 }
