--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "nicholas faiz",
   "name": "ectypes",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "repository": {
     "type": "git",
     "url": "git://github.com/nicholasf/ectypes.js.git"
@@ -14,11 +14,11 @@
     "underscore": "~1.3.3"
   },
   "devDependencies": {
-    "Faker": "*",
+    "faker2": "*",
     "mocha": "~1.3.2",
     "should": "~1.1.0"
   },
   "scripts": {
-    "test": "mocha --ignore-leaks tests/ectypes-test.js"
+    "test": "mocha tests/ectypes-test.js"
   }
 }
