--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "nicholas faiz",
   "name": "ectypes",
-  "version": "0.0.6",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "git://github.com/nicholasf/ectypes.js.git"
@@ -11,7 +11,8 @@
     "node": "~0.6.12"
   },
   "dependencies": {
-    "underscore": "~1.3.3"
+    "underscore": "~1.3.3",
+    "faker2": "~0.5.0"
   },
   "devDependencies": {
     "faker2": "*",
