--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "lib/ectypes",
   "engines": {
-    "node": "~0.6.12"
+    "node": ">=0.6.x"
   },
   "dependencies": {
     "underscore": "~1.3.3",
