--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "underscore": "~1.3.3",
-    "faker2": "~0.5.0"
+    "faker2": "~0.5.0",
+    "async": "~0.1.22"
   },
   "devDependencies": {
     "faker2": "*",
