--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "node": ">=0.6.x"
   },
   "dependencies": {
-    "underscore": "~1.3.3",
+    "async": "~0.1.22",
+    "eslint": "^1.10.3",
     "faker2": "~0.5.0",
-    "async": "~0.1.22"
+    "underscore": "~1.3.3"
   },
   "devDependencies": {
     "faker2": "*",
